--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,8 @@ body {
     background-color: rgb(red 193, green 223, blue 240);
     border: 1px red solid;
 }
+
+.profileImageContainer {
+    border: 1px solid red;
+}
+
