--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
-    background-color: rgb(red 193, green 223, blue 240);
-    border: 1px red solid;
+    background: #ACE3DE;
 }
 
 .profileImageContainer {
