--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
 
 .profileImageContainer {
     border: 1px solid red;
-    border-radius: 10px;
+    border-radius: 50%;
+    display: flex;
 }
 
 .profileNameContainer {
