--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     border: 1px solid red;
     border-radius: 50%;
     display: flex;
+    align-content: center;
 }
 
 .profileNameContainer {
