--- a/styles.css
+++ b/styles.css
@@ -26,4 +26,7 @@ body {
 .profileLinksContainer {
     border: solid 1px red;
     padding: 10px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
