--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,11 @@ body {
 }
 
 a {
-    border: solid 1px red;
+    border: solid 3px white;
     padding: 10px;
     display: flex;
     align-content: center;
     justify-content: center;
+    background-color: #ACE3DE ;
+    text-decoration: none;
 }
