--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,11 @@ body {
 }
 
 .profileImage {
-    border-radius: 90%;
-    height: 50%;
+    border-radius: 50%;
+    height: 200px;
 }
 
 .profileImageContainer {
-    border: 1px solid red;
     display: flex;
     align-content: center;
     justify-content: center;
