--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,6 @@ a {
     display: flex;
     align-content: center;
     justify-content: center;
-    background-color: #ACE3DE ;
+    background-color: darkgrey;
     text-decoration: none;
 }
