--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,11 @@ body {
 
 a {
     border: solid 3px white;
-    padding: 10px;
+    padding: 10px 20px;
     display: flex;
     align-content: center;
     justify-content: center;
     background-color: darkgrey;
     text-decoration: none;
+    
 }
