--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     display: flex;
     align-content: center;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
