--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,8 @@ a {
     margin: 30px;
     padding: 30px;
 }
+
+a:hover {
+    transform: scale(1.02);
+    box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8) ;
+}
